retrieveUnpackaged/objects/RelationCustomerProfessional__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active / Flag whether this relationship is active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <description>/</description>
        <formula>Customer__r.Name</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerShippingCity__c</fullName>
        <description>/</description>
        <formula>Customer__r.ShippingCity</formula>
        <label>Customer Shipping City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <description>/</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Professionals</relationshipLabel>
        <relationshipName>R00ND0000003MsNlMAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>/</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProfessionalCity__c</fullName>
        <formula>Professional__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalEmail__c</fullName>
        <description>/</description>
        <formula>Professional__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalFirstName__c</fullName>
        <description>/</description>
        <formula>Professional__r.FirstName</formula>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalLastName__c</fullName>
        <description>/</description>
        <formula>Professional__r.LastName</formula>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalMailingCity__c</fullName>
        <description>/</description>
        <formula>Professional__r.MailingCity</formula>
        <label>Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalMobilePhone__c</fullName>
        <description>/</description>
        <formula>Professional__r.MobilePhone</formula>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalPhone__c</fullName>
        <description>/</description>
        <formula>Professional__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalRecordType__c</fullName>
        <description>/</description>
        <formula>IF(Professional__r.RecordTypeId==&quot;012D0000000MRUW&quot;, &quot;Surgeon&quot;,IF(Professional__r.RecordTypeId==&quot;012D0000000MRUb&quot;, &quot;Audiologist&quot;,&quot;Other&quot;))</formula>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalSalutation__c</fullName>
        <description>/</description>
        <formula>Text(Professional__r.Salutation)</formula>
        <label>Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalStreet__c</fullName>
        <formula>Professional__r.Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalTitle__c</fullName>
        <description>/</description>
        <formula>Professional__r.Title</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalTrainingStatus__c</fullName>
        <description>/</description>
        <formula>Text(Professional__r.TrainingStatus__c)</formula>
        <label>Training Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional__c</fullName>
        <description>/</description>
        <label>Professional</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Clinics/Distributors</relationshipLabel>
        <relationshipName>R00ND0000003MsNqMAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>StartDate / Start date of this relationship</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Relation Customer Professional</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R{000000000}</displayFormat>
        <label>Relation Customer Professional Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relations Customer Professional</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>